--- a/src/components/style/login.module.css
+++ b/src/components/style/login.module.css
@@ -49,6 +49,7 @@ input[type="password"] {
 }
 
 input[type="email"]:focus,
+input[type="text"]:focus,
 input[type="password"]:focus {
     border-color: #7C3AED;
     box-shadow: 0 0 0 3px rgba(124, 58, 237, 0.3);
@@ -91,7 +92,7 @@ input[type="password"]:focus {
     .loginContainer {
         width: 100%;
         max-width: 250px;
-        padding: 4rem;
+        padding: 2rem;
         background-color: white;
         border-radius: 0.5rem;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
@@ -102,7 +103,7 @@ input[type="password"]:focus {
     }
 
     .loginTitle {
-        font-size: 1.25rem;
+        font-size: 2rem;
     }
 
     .loginButton {
