--- a/src/components/style/Dashboard.module.css
+++ b/src/components/style/Dashboard.module.css
@@ -1,6 +1,6 @@
 .dashboard {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     background-color: #ffffff;
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
@@ -18,7 +18,7 @@
 .charts, .counts {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* این خط اضافه شده است */
+    justify-content: center; 
     gap: 20px;
     margin: 30px 0;
 }
@@ -35,7 +35,7 @@
     justify-content: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     max-width: 100%;
-    margin: 0 auto; /* این خط اضافه شده است */
+    margin: 0 auto;
 }
 
 .card:hover {
@@ -95,11 +95,11 @@
 @media (min-width: 1025px) {
     .charts, .counts {
         flex-direction: row;
-        justify-content: center; /* این خط اضافه شده است */
+        justify-content: center; 
     }
 
     .card {
         flex: 1 1 45%; 
-        margin: 0 auto; /* این خط اضافه شده است */
+        margin: 0 auto; 
     }
 }
