--- a/src/components/style/profile.module.css
+++ b/src/components/style/profile.module.css
@@ -14,7 +14,7 @@
     height: 150px;
     border-radius: 50%;
     margin-bottom: 10px;
-    object-fit: cover; /* جلوگیری از کشیده شدن تصویر */
+    object-fit: cover; 
   }
   
   .profileName {
@@ -35,11 +35,11 @@
     cursor: pointer;
     border-radius: 20px;
     margin-left: 10px;
-    transition: background-color 0.3s ease; /* انیمیشن برای تغییر رنگ پس‌زمینه */
+    transition: background-color 0.3s ease; 
   }
   
   .followButton:hover {
-    background-color: #0056b3; /* تغییر رنگ پس‌زمینه در حالت هاور */
+    background-color: #0056b3; 
   }
   
   .profileDetails {
@@ -57,13 +57,13 @@
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
-    flex-wrap: wrap; /* نمایش فرم‌ها در ردیف‌های متعدد در صورت نیاز */
+    flex-wrap: wrap; 
   }
   
   .formGroup {
     flex: 1;
     margin-bottom: 8px;
-    min-width: 200px; /* حداقل عرض برای فرم‌ها */
+    min-width: 200px; 
   }
   
   .formControl {
@@ -71,7 +71,7 @@
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    box-sizing: border-box; /* شامل شدن padding در اندازه‌گیری */
+    box-sizing: border-box; 
   }
   
   .updateButton {
@@ -83,10 +83,10 @@
     border-radius: 5px;
     width: 100%;
     text-align: center;
-    transition: background-color 0.3s ease; /* انیمیشن برای تغییر رنگ پس‌زمینه */
+    transition: background-color 0.3s ease; 
   }
   
   .updateButton:hover {
-    background-color: #004fa3; /* تغییر رنگ پس‌زمینه در حالت هاور */
+    background-color: #004fa3; 
   }
   
