--- a/src/components/style/index.module.css
+++ b/src/components/style/index.module.css
@@ -138,12 +138,12 @@ a {
 }
 
 .paragraphSection h2 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     margin-bottom: 3rem;
     color: #4c65af;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 700px) {
     .paragraph {
         flex-direction: row;
         justify-content: space-between;
@@ -151,5 +151,10 @@ a {
 
     .paragraph>div {
         flex: 1 1 calc(50% - 30px);
+    }
+
+    .paragraphSection h2 {
+        font-size: 2.5rem;
+        text-align: center;
     }
 }
