--- a/src/components/style/header.module.css
+++ b/src/components/style/header.module.css
@@ -35,3 +35,134 @@
 .liabout {
   float: right
 }
+
+/* سبک‌های کلی منو */
+.ulheader {
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.liheader {
+  float: left;
+  border-right: 1px solid #bbb;
+}
+
+.liheader:last-child {
+  border-right: none;
+}
+
+.aheader {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.aheader:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #1a73e8;
+}
+
+.liabout {
+  float: right;
+}
+
+.burgerButton {
+  display: none;
+}
+
+.closeButton {
+  display: none;
+}
+
+.ulheadermobile {
+  display: none;
+}
+
+/* سبک‌های موبایل */
+@media (max-width: 768px) {
+  .ulheader {
+    position: fixed;
+    right: -100%;
+    top: 0;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    flex-direction: column;
+    justify-content: start;
+    padding-top: 60px;
+    transition: right 0.3s ease;
+    z-index: 1001; 
+  }
+
+  .ulheader.menuOpen {
+    right: 0;
+  }
+
+  .liheader {
+    float: none;
+    border-right: none;
+    border-bottom: 1px solid #bbb;
+    width: 100%;
+  }
+
+  .burgerButton {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: white;
+    background-color: #333;
+    border: none;
+    padding: 10px;
+    z-index: 1000;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+  }
+
+  .closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    color: white;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: block;
+  }
+
+  .ulheadermobile {
+    width: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    display: flex;
+  }
+
+  .ulheadermobile  {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    font-size: 1.4rem;
+    color: white;
+    display: flex;
+  }
+
+  .homeButton {
+    border-top: 1px solid #bbb;
+  }
+  
+}
