--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ img::selection{
     background-color: none;
     background: none;
 }
+
+.swal2-container {
+    z-index: 9999;
+}
+
+body {
+    padding-right: 0 !important;
+  }
